# dark-tower-game-2

./: .gitignore  AGENTS.md  Makefile  main.py  pyproject.toml
.opencode/plans/: 2026-04-20-dark-fort-tui-design.md  2026-04-20-dark-fort-tui-implementation.md  2026-04-20-inventory-equip-design.md  2026-04-20-inventory-equip-implementation.md  2026-04-20-shop-key-handling-implementation.md  2026-04-20-tui-integration-tests-design.md  2026-04-21-design-patterns-implementation.md  2026-04-21-fix-enum-usage.md
docs/: backlog.md  backlog_done.md  screen-mocks.md  todo.md  wishlist.md
docs/superpowers/plans/: 2026-04-20-tui-integration-tests-implenetation.md  2026-04-21-item-model-inheritance-implementation.md  2026-04-22-clean-architecture-implementation.md  2026-04-23-resolve-code-todos.md  2026-04-23-todo-ui-fixes.md  2026-04-24-missing-tests.md
docs/superpowers/specs/: 2026-04-20-shop-key-handling-design.md  2026-04-21-design-patterns-design.md  2026-04-21-item-model-inheritance-design.md  2026-04-22-clean-architecture-design.md  2026-04-22-todo-cleanup-design.md  2026-04-23-resolve-code-todos-design.md  2026-04-23-todo-ui-fixes-design.md
src/dark_fort/: __init__.py  __main__.py  cli.py
src/dark_fort/game/: __init__.py  dice.py  dungeon.py  engine.py  enums.py  models.py  phase_states.py  rules.py  tables.py
tests/game/: test_dice.py  test_dungeon.py  test_engine.py  test_enums.py  test_models.py  test_phase_states.py  test_room_event_result.py  test_rules.py  test_tables.py
tests/tui/: test_display.py  test_flows.py  test_screens.py  test_widgets.py
(+6 files in other folders)
