[project]
name = "dark-fort"
version = "0.1.0"
description = "A terminal TUI adaptation of the DARK FORT solo dungeon-crawler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "textual>=8.2.4",
]

[project.scripts]
dark-fort = "dark_fort.cli:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.13"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]
